--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,21 @@
   display: flex;
   flex-direction: row;
   align-content: center;
+  padding: 30px 40px;
 }
+
+.logo {
+  width: 230px;
+  height: 200px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
+}
+
+/* .details {
+  background-color: #00e6ff;
+  border-radius: 8px;
+  box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
+} */
 
 .footer {
   background: url("https://res.cloudinary.com/dojhf40bp/image/upload/v1638551854/footer_g2hom0.jpg");
