--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,8 @@
 .App {
   text-align: center;
   background-color: #adffc6;
-  height: 100vh;
+  height: auto;
+  width: 100vw;
   font-family: "Genos", sans-serif;
 }
 
@@ -17,7 +18,7 @@
 .links-main {
   background-color: #00e6ff;
   border-radius: 8px;
-  width: 40%;
+  width: 20%;
   margin-left: 40px;
   text-align: center;
 }
@@ -33,18 +34,38 @@
 }
 
 .main {
+  width: 100%;
   display: flex;
   flex-direction: row;
   align-content: center;
-  justify-content: space-between;
-  padding: 30px 40px;
+  margin: 50px 10px;
+}
+
+.logo-img-div {
+  width: 50%;
 }
 
 .logo {
-  width: 230px;
-  height: 200px;
+  width: 50%;
+  height: auto;
   border-radius: 8px;
   box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
+}
+
+.details {
+  width: 50%;
+}
+
+.content-div {
+  text-align: center;
+  width: 50%;
+}
+
+.quiz-link {
+  background-color: #aa74ff;
+  border-radius: 8px;
+  display: block;
+  margin: 10px 0;
 }
 
 h1 {
