--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,6 +80,9 @@ h1 {
   background-color: #00e6ff;
   padding: 16px;
   border-radius: 8px;
+  position: absolute;
+  top: 10px;
+  right: 322px;
 }
 
 /* .details {
