--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,10 +17,11 @@
 
 .links-main {
   background-color: #00e6ff;
-  border-radius: 8px;
+  border-radius: 4px;
   width: 20%;
-  margin-left: 40px;
+  margin-left: 152px;
   text-align: center;
+  box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
 }
 
 .links {
@@ -59,6 +60,10 @@
 .content-div {
   text-align: center;
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  bottom: 110px;
 }
 
 .quizzes {
@@ -87,9 +92,10 @@ h1 {
   background-color: #00e6ff;
   padding: 16px;
   border-radius: 8px;
-  position: absolute;
-  top: 10px;
-  right: 322px;
+  box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
+  width: 60%;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 /* .details {
