--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,7 +79,7 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  bottom: 196px;
+  bottom: 96px;
 }
 
 .quizzes {
@@ -87,7 +87,7 @@
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
-  height: 200px;
+  /* height: 200px; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -98,7 +98,7 @@
   background-color: #aa74ff;
   border-radius: 8px;
   display: block;
-  margin: 10px 0;
+  margin: 26px 0;
   width: 140px;
   border: 10px solid #adffc6;
 }
