--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,6 @@
 .App {
   text-align: center;
   background-color: #adffc6;
-  height: auto;
   width: 100vw;
   font-family: "Genos", sans-serif;
   margin: auto;
@@ -64,9 +63,10 @@
 }
 
 .logo {
-  width: 90%;
-  max-width: 450px;
+  width: 100%;
+  max-width: 400px;
   height: auto;
+  max-height: 338px;
   border-radius: 8px;
   box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
 }
@@ -78,13 +78,14 @@
   height: auto;
   display: flex;
   flex-direction: column;
-  position: absolute;
-  bottom: 96px;
+  position: relative;
+  bottom: 112px;
 }
 
 .quizzes {
   background-color: #00e6ff;
-  padding: 20px;
+  padding: 0 20px;
+  height: 338px;
   border-radius: 8px;
   box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
   display: flex;
