--- a/client/src/App.css
+++ b/client/src/App.css
@@ -181,9 +181,51 @@ button {
 
 /* Results */
 .results {
+  background-color: #00e6ff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  max-width: 550px;
+  max-height: 300px;
 }
 
 .results-content {
+  width: 100%;
+  height: 100%;
+  padding-bottom: 10px;
+  background-color: #adffc6;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  bottom: 110px;
+}
+
+.res {
+  margin-left: 0px;
+}
+
+p {
+  font-size: 20px;
+  margin: 10px 0;
+  color: white;
+  background-color: #aa74ff;
+  border-radius: 8px;
+  padding: 15px 15px;
+  margin: 15px 30px;
+  min-width: 100px;
+}
+
+.add-link {
+  background-color: #aa74ff;
+  border-radius: 8px;
+  min-width: 40px;
 }
 
 /* Footer */
