--- a/client/src/App.css
+++ b/client/src/App.css
@@ -228,6 +228,62 @@ p {
   min-width: 40px;
 }
 
+/* Form */
+.new-details {
+  background-color: #00e6ff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  max-width: 550px;
+  max-height: 300px;
+}
+
+.new-content {
+  width: 100%;
+  height: 100%;
+  padding-bottom: 10px;
+  background-color: #adffc6;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  bottom: 120px;
+}
+
+.new {
+  padding: 0px;
+}
+
+form {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+input,
+select {
+  color: white;
+  background-color: #aa74ff;
+  text-align: center;
+  border-radius: 8px;
+  font-family: "Genos", sans-serif;
+  font-size: 18px;
+  display: block;
+  margin: 5px 0;
+  min-width: 215px;
+}
+
+::placeholder {
+  color: white;
+}
+
 /* Footer */
 .footer {
   background: url("https://res.cloudinary.com/dojhf40bp/image/upload/v1638551854/footer_g2hom0.jpg");
