--- a/client/src/App.css
+++ b/client/src/App.css
@@ -177,6 +177,7 @@ button {
   display: block;
   margin: 5px 0;
   min-width: 140px;
+  border: 2px solid rgb(101, 101, 101);
 }
 
 /* Results */
@@ -218,14 +219,16 @@ p {
   background-color: #aa74ff;
   border-radius: 8px;
   padding: 15px 15px;
-  margin: 15px 30px;
+  margin: 8px 30px;
   min-width: 100px;
+  max-width: 220px;
 }
 
 .add-link {
   background-color: #aa74ff;
   border-radius: 8px;
   min-width: 40px;
+  border: 2px solid rgb(101, 101, 101);
 }
 
 /* Form */
@@ -278,6 +281,8 @@ select {
   display: block;
   margin: 5px 0;
   min-width: 215px;
+  border: none;
+  /* border: 1px black solid; */
 }
 
 ::placeholder {
