--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,7 @@
   text-align: center;
   background-color: #adffc6;
   width: 100vw;
+  height: 100vh;
   font-family: "Genos", sans-serif;
   margin: auto;
   padding: 0;
@@ -12,16 +13,18 @@
 
 .header {
   background-image: url(https://res.cloudinary.com/dojhf40bp/image/upload/v1638551854/footer_g2hom0.jpg);
-  background-size: contain;
+  background-size: 600px;
   padding: 10px 0;
   text-align: left;
+  height: 80px;
 }
 
 .links-main {
   background-color: #00e6ff;
   border-radius: 4px;
   width: 20%;
-  margin-left: 34px;
+  margin-left: 85px;
+  margin-top: 40px;
   text-align: center;
   box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
   font-size: 18px;
@@ -45,8 +48,8 @@
   flex-direction: row;
   align-content: center;
   justify-content: center;
-  margin: 50px 10px;
-  max-height: 338px;
+  /* margin: 50px 10px; */
+  /* min-height: 338px; */
 }
 
 .logo-img-div {
@@ -63,13 +66,17 @@
   flex-direction: row;
   align-content: center;
   justify-content: center;
-  min-height: 338px;
+}
+
+.height {
+  margin-top: 80px;
 }
 
 /* Homepage */
 .logo {
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
+  max-height: 400px;
   border-radius: 8px;
   box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
 }
@@ -77,23 +84,22 @@
 .content-div {
   text-align: center;
   width: 100%;
-  max-width: 550px;
-  height: auto;
+  max-width: 850px;
   display: flex;
   flex-direction: column;
   position: relative;
-  bottom: 112px;
+  bottom: 110px;
 }
 
 .quizzes {
   background-color: #00e6ff;
-  padding: 20px 20px;
+  padding: 50px 20px;
   border-radius: 8px;
   box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .quiz-link {
@@ -101,7 +107,7 @@
   border-radius: 8px;
   display: block;
   margin: 23px 0;
-  width: 160px;
+  width: 260px;
   border: 10px solid #adffc6;
   font-size: 20px;
 }
@@ -113,7 +119,12 @@ h1 {
   border-radius: 8px;
   box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
   width: 60%;
-  margin-left: 90px;
+  margin-left: 150px;
+}
+
+.home {
+  position: relative;
+  top: 50px;
 }
 
 /* Questions */
@@ -128,8 +139,8 @@ h1 {
   align-items: center;
   text-align: center;
   width: 100%;
-  max-width: 550px;
-  max-height: 300px;
+  max-width: 850px;
+  max-height: 360px;
 }
 
 .quizzes-content {
@@ -190,8 +201,8 @@ button {
   align-items: center;
   text-align: center;
   width: 100%;
-  max-width: 550px;
-  max-height: 300px;
+  max-width: 850px;
+  max-height: 360px;
 }
 
 .results-content {
@@ -241,8 +252,8 @@ p {
   align-items: center;
   text-align: center;
   width: 100%;
-  max-width: 550px;
-  max-height: 300px;
+  max-width: 850px;
+  max-height: 360px;
 }
 
 .new-content {
@@ -255,7 +266,7 @@ p {
   flex-direction: column;
   align-items: center;
   position: relative;
-  bottom: 120px;
+  bottom: 80px;
 }
 
 .new {
@@ -281,7 +292,6 @@ select {
   margin: 5px 0;
   min-width: 215px;
   border: none;
-  /* border: 1px black solid; */
 }
 
 ::placeholder {
@@ -291,8 +301,12 @@ select {
 /* Footer */
 .footer {
   background: url("https://res.cloudinary.com/dojhf40bp/image/upload/v1638551854/footer_g2hom0.jpg");
-  background-size: contain;
+  background-size: 600px;
   padding: 15px 0;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 100px;
 }
 
 li {
