--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,7 +5,7 @@
   text-align: center;
   background-color: #adffc6;
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
   font-family: "Genos", sans-serif;
   margin: auto;
   padding: 0;
@@ -48,8 +48,6 @@
   flex-direction: row;
   align-content: center;
   justify-content: center;
-  /* margin: 50px 10px; */
-  /* min-height: 338px; */
 }
 
 .logo-img-div {
@@ -332,5 +330,49 @@ small {
 
 /* Media Queries */
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 1290px) {
+}
+
+@media only screen and (max-width: 900px) {
+  .App {
+    height: 100%;
+  }
+  .links-main {
+    margin: 0 auto;
+    width: 30%;
+  }
+  .main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 0;
+  }
+  .logo-img-div {
+    margin: 10px;
+  }
+  .content-div {
+    position: static;
+    margin: 5px 0;
+  }
+  .home {
+    position: static;
+  }
+  h1 {
+    margin: 0 auto;
+    font-size: 22px;
+  }
+  .height {
+    margin-top: 10px;
+  }
+  .quiz-link {
+    margin: 10px 0;
+    width: 70%;
+    font-size: 18px;
+  }
+  .footer {
+    position: static;
+  }
+  i {
+    font-size: 30px;
+  }
 }
