--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,21 +49,22 @@
   flex-direction: row;
   align-content: center;
   justify-content: center;
+  /* margin: 50px 10px;*/
 }
 
 .logo-img-div {
   width: 40%;
-  display: flex;
+  /* display: flex;
   flex-direction: row;
-  align-content: center;
-  justify-content: center;
+  align-items: center;
+  justify-content: center; */
 }
 
 .details {
   width: 60%;
   display: flex;
   flex-direction: row;
-  align-content: center;
+  align-items: center;
   justify-content: center;
 }
 
@@ -78,34 +79,38 @@
 
 /* Homepage */
 .logo {
-  /* width: 100%;
-  max-width: 500px;
-  max-height: 400px; */
-  max-width: 100%;
-  height: 78%;
+  width: 100%;
+  height: auto;
+  max-width: 480px;
+  max-height: 400px;
   border-radius: 8px;
   box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
 }
 
 .content-div {
-  text-align: center;
-  width: 100%;
-  max-width: 750px;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  bottom: 110px;
-}
-
-.quizzes {
   background-color: #00e6ff;
-  padding: 50px 20px;
+  padding: 20px;
   border-radius: 8px;
   box-shadow: 0px 0px 8px 1px rgb(1, 160, 136);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  text-align: center;
+  width: 100%;
+  max-width: 750px;
+  max-height: 360px;
+}
+
+.quizzes {
+  width: 100%;
+  height: 100%;
+  padding-bottom: 10px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  bottom: 180px;
 }
 
 .quiz-link {
@@ -128,13 +133,7 @@ h1 {
   margin-left: 150px;
 }
 
-.home {
-  position: relative;
-  top: 50px;
-}
-
 /* Questions */
-
 .quizzes-details {
   background-color: #00e6ff;
   padding: 20px;
@@ -337,7 +336,6 @@ small {
 }
 
 /* Media Queries */
-
 @media only screen and (max-width: 1050px) {
   .new {
     font-size: 26px;
@@ -365,20 +363,16 @@ small {
     margin: 10px;
   }
   .content-div {
-    position: static;
-    margin: 5px 0;
+    width: 70%;
+    font-size: 18px;
   }
-
-  .home {
-    position: static;
-  }
+  .quizzes,
   .quizzes-content,
   .new-content,
   .results-content {
     position: relative;
     bottom: 70px;
   }
-  h1,
   .layover {
     margin: 0 auto;
     font-size: 20px;
@@ -389,6 +383,11 @@ small {
     position: relative;
     bottom: 80px;
     margin-bottom: 10px;
+  }
+  .home {
+    margin-top: 40px;
+    position: relative;
+    bottom: 120px;
   }
   .new {
     width: 120px;
@@ -404,6 +403,7 @@ small {
     width: 70%;
     font-size: 18px;
   }
+  .content-div,
   .quizzes-details,
   .new-details,
   .results {
