--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Bungee+Outline&family=Genos:wght@300&display=swap");
 
 /* Header */
+/* RESOURCE for textured background - https://www.transparenttextures.com/ */
 .App {
   text-align: center;
   background-color: #adffc6;
+  background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
   width: 100vw;
   height: 100vh;
   font-family: "Genos", sans-serif;
